@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-29T00:52:24Z",
-  "count_outdated" : 1414,
-  "uniques_outdated" : 935,
-  "count" : 1430,
-  "uniques" : 951,
+  "timestamp" : "2025-09-30T00:51:16Z",
+  "count_outdated" : 1415,
+  "uniques_outdated" : 936,
+  "count" : 1431,
+  "uniques" : 952,
   "clones" : [
-    {
-      "timestamp": "2025-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-17T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
