@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-09-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-09-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
